--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -7,15 +7,22 @@
     <style>
         body {
             height: 95vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            /* shorthand background
+            color > image > position > repeat > [size] > attachement*/
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
         }
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid black;
@@ -29,6 +36,19 @@
             Teste de imagem com fundo
         </h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, praesentium unde, animi numquam magnam reiciendis eos velit voluptas ex deserunt dolor assumenda voluptatem, reprehenderit est error non. Facere, consequuntur eveniet!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse quos quam quia odio labore dicta blanditiis, dignissimos, totam inventore eaque error nihil fugit deleniti recusandae sapiente in vero cupiditate officia?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur tempore laudantium praesentium neque maxime pariatur. Assumenda, expedita ducimus distinctio eos laboriosam fugiat incidunt, atque itaque corrupti perferendis iste aperiam! Rerum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci repellendus totam sunt officiis porro enim quam vitae tempore ipsum, consectetur ducimus architecto illo nihil est maiores quae nisi quis quos.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum exercitationem corrupti impedit sed magnam inventore, sequi veniam vel dolor ducimus accusantium porro repudiandae iure adipisci incidunt quam facere quas deleniti?/p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non provident expedita, quis exercitationem iusto fugiat ipsum. Alias, minima, earum maiores, libero temporibus nihil eius saepe veritatis voluptate aliquam hic dolore.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, perferendis. Neque nemo numquam voluptatibus mollitia odit saepe quia, fugit fuga similique eum distinctio deleniti eos, asperiores aspernatur. Quod, excepturi officia.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nostrum eveniet incidunt natus tempora facere voluptatem, consectetur esse dolor nam beatae, sunt suscipit ullam ratione blanditiis repellendus placeat quasi! Nisi?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem minima deleniti quis optio enim tenetur, fuga adipisci soluta libero sequi qui ad maiores porro, atque, repellendus animi veniam doloremque cupiditate.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam, quos dolores officiis nam nesciunt et voluptatum nihil officia accusamus in, sequi odio, molestiae veniam inventore qui. Totam recusandae quod magni.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque molestiae quis quos, nihil voluptatibus tenetur perferendis tempore sed nulla, deserunt sequi. Aperiam, dolore. Adipisci soluta ex repellendus! Consectetur, temporibus non?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda repellendus libero, rerum nesciunt reiciendis, magni iste a iure iusto qui, velit laboriosam quia! Omnis, dicta nulla laborum ratione in nobis?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere illo error repellendus minima. Deserunt quas harum nihil qui nesciunt, molestiae incidunt natus tempora iusto illo dolor excepturi placeat ut ab.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt minus maiores quibusdam voluptatibus aliquid labore commodi perspiciatis officia natus cupiditate consequuntur at, ut nesciunt mollitia amet consectetur sapiente minima consequatur.</p>
     </main>
 </body>
 </html>
