--- a/desafios/d012/index.html
+++ b/desafios/d012/index.html
@@ -14,7 +14,7 @@
         <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" >Milton Duarte</a></p>
     </header>
     <main>
-        <section>
+        <section class="normal">
             <p>
                 Estou ficando cansado <br>
                 Da tal tecnologia <br>
@@ -36,7 +36,7 @@
                 E um coração desenhado. <br>
             </p>
         </section>
-        <section>
+        <section class="normal">
             <p>
                 Arroba agora não pesa <br>
                 É parte de um endereço <br>
@@ -67,7 +67,7 @@
                 Nas linhas do coração. <br>
             </p>
         </section>
-        <section>
+        <section class="normal">
             <p>
                 Agora, escrevo e envio <br>
                 Chegando na mesma hora <br>
