--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -16,55 +16,76 @@
             width: 500px;
             border: 2px solid black;
             border-collapse: collapse;
+            position: relative;
         }
         td, th {
             border: 1px solid black;
             padding: 10px;
+        }
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: black;
+        }
+        tbody > tr:nth-child(2n) {
+            background-color: lightblue;
+        }
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+        .num {
+            text-align: right;
         }
     </style>
 </head>
 <body>
     <h1>Uso de tabelas grandes</h1>
     <table>
+        <caption>
+            População das unidades federativas
+        </caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col">População</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>São Paulo</td>
-                <td>45 919 049</td>
+                <td class="num">45 919 049</td>
             </tr>
             <tr>
                 <td>Minas Gerais</td>
-                <td>21 168 791</td>
+                <td class="num">21 168 791</td>
             </tr>
             <tr>
                 <td>Rio De Janeiro</td>
-                <td>17 264 943</td>
+                <td class="num">17 264 943</td>
             </tr>
             <tr>
                 <td>Bahia</td>
-                <td>14 873 064</td>
+                <td class="num">14 873 064</td>
             </tr>
             <tr>
                 <td>Paraná</td>
-                <td>11.433.957</td>
+                <td class="num">11.433.957</td>
             </tr>
             <tr>
                 <td>Rio Grande Do Sul</td>
-                <td>11.377.239</td>
+                <td class="num">11.377.239</td>
             </tr>
             <tr>
                 <td>Pernambuco</td>
-                <td>9.557.071</td>
+                <td class="num">9.557.071</td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
-                <td>Total De Habitantes</td>
+                <th scope="row">Total De Habitantes</td>
                 <td>00000</td>
             </tr>
         </tfoot>
