--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -20,8 +20,8 @@
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iusto, necessitatibus sunt. Dicta voluptatem eaque dolorem quo in fuga rerum totam fugit ipsam animi excepturi iste, quasi, qui ipsa aut repellat.</p>
     <ul>
         <li><a href="paginas_extras/pag001.html" target="frame">Primeira página</a></li>
-        <li><a href="#">Segunda página</a></li>
-        <li><a href="#">Terceira página</a></li>
+        <li><a href="paginas_extras/pag002.html" target="frame">Segunda página</a></li>
+        <li><a href="paginas_extras/pag003.html" target="frame">Terceira página</a></li>
     </ul>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor harum maiores labore velit est exercitationem, aliquam necessitatibus hic fugiat commodi tempore totam nobis veniam blanditiis dolorum repudiandae deleniti corrupti minima.</p>
 
