--- a/exercicios/ex025/form003.html
+++ b/exercicios/ex025/form003.html
@@ -7,20 +7,33 @@
 </head>
 <body>
     <h1>Teste deformulário</h1>
-    <form action="cadastro.php" method="post"></form>
-    <p>
-        <label for="inome">Nome</label>
-        <input type="text" name="nome" id="inome" required maxlength="30" placeholder="Nome completo">
-    </p>
-    <p>
-        <label for="imedia">Média</label>
-        <input type="number" name="media" id="imedia" min="0" max="10">
+    <form action="cadastro.php" method="post">
+        <p>
+            <label for="inome">Nome</label>
+            <input type="text" name="nome" id="inome" required maxlength="30" placeholder="Nome completo" required>
+        </p>
+        <p>
+            <label for="imedia">Média</label>
+            <input type="number" name="media" id="imedia" min="0" max="10" step="0.1" required>
 
-    </p>
-    <p>
-        <input type="button" value="Enviar">
-        <input type="reset" value="Limpar">
-    </p>
+        </p>
+        <p>
+            <label for="imes">Mês</label>
+            <input type="month" name="mes" id="imes">
+        </p>
+        <p>
+            <label for="idia">Dia</label>
+            <input type="date" name="dia" id="idia">
+        </p>
+        <p>
+            <label for="ihora">Hora</label>
+            <input type="time" name="hora" id="ihora">
+        </p>
+        <p>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
+        </p>
+    </form>
     
 </body>
 </html>
